# ChairPerson

./: .gitignore  README.md
FEMSim/: Parse_Force.py  fem_3d  painted.ply  run.sh
HumanReconstruction/: CMakeLists.txt  main.cpp  parse_poly.h  sphere.h
HumanReconstruction/poly_files/: skeleton_ElbowLeft_WristLeft.poly  skeleton_ElbowRight_WristRight.poly  skeleton_HipLeft_KneeLeft.poly  skeleton_HipRight_KneeRight.poly  skeleton_KneeLeft_AnkleLeft.poly  skeleton_KneeRight_AnkleRight.poly  skeleton_Neck_Head.poly  skeleton_ShoulderLeft_ElbowLeft.poly  skeleton_ShoulderRight_ElbowRight.poly  skeleton_SpineBase_HipLeft.poly  skeleton_SpineBase_HipRight.poly  skeleton_SpineMidLeft01_HipLeft01.poly  skeleton_SpineMidLeft01_ShoulderLeft01.poly  skeleton_SpineMidLeft02_HipLeft02.poly  skeleton_SpineMidLeft02_ShoulderLeft02.poly  skeleton_SpineMidRight01_HipRight01.poly  skeleton_SpineMidRight01_ShoulderRight01.poly  skeleton_SpineMidRight02_HipRight02.poly  skeleton_SpineMidRight02_ShoulderRight02.poly  skeleton_SpineMid_SpineBase.poly  skeleton_SpineShoulder_Neck.poly  skeleton_SpineShoulder_ShoulderLeft.poly  skeleton_SpineShoulder_ShoulderRight.poly  skeleton_SpineShoulder_SpineMid.poly
Txt2Poly/: Convert_Skeleton_Data.py  Convert_Skeleton_Data_All.py  skeleton.txt
openvdb/: Makefile
openvdb/viewer/: Camera.cc  Viewer.cc
